--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/application.css" media="screen" title="no title" charset="utf-8">
     <title>Myportfolio</title>
   </head>
@@ -22,7 +22,7 @@
     <div class="main">
       <div class="about">
       <button type="button" name="button">WHAT I SHOOT</button>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat sint.</p>
       </div>
 
       <div class="images-list">
@@ -35,7 +35,7 @@
             <li><img src="img/pic6.png" alt="pic-6"/></li>
             <li><img src="img/pic7.png" alt="pic-7"/></li>
             <li><img src="img/pic8.png" alt="pic-8"/></li>
-            <li><img src="img/pic9.png" alt="pic-9"/></li>
+            <!-- <li><img src="img/pic9.png" alt="pic-9"/></li> -->
         </ul>
         </div>
        </div>
