--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
   <head>
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/application.css" media="screen" title="no title" charset="utf-8">
+     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
     <title>Myportfolio</title>
   </head>
   <body>
     <div class="container">
-    <div class="nav-bar">
+      <div class="nav-bar">
         <ul>
           <li><a href="#">Galleries</a><li>
           <li><a href="#">About Me</a><li>
           <li><a href="#">Contacts</a><li>
           <li><a href="#">Terms of Use</a><li>
         </ul>
-    </div>
+        <ul class="fa-ul">
+          <li><a href="https://twitter.com"><i class="fa-li fa fa-twitter-square"></i>Twitter</a></a></li>
+          <li><a href="https://www.facebook.com"><i class="fa-li fa fa-facebook-square"></i>Facebook</a></li>
+        </ul>
+      </div>
       <div class="heading">
         <h1>MYPORTFOLIO</h1>
 
@@ -27,36 +32,50 @@
 
       <div class="images-list">
         <ul>
-            <li><img src="img/pic1.jpg" alt="pic-1"/></li>
-            <li><img src="img/pic2.jpg" alt="pic-2"/></li>
-            <li><img src="img/pic3.jpg" alt="pic-3"/></li>
-            <li><img src="img/pic4.png" alt="pic-4"/></li>
-            <li><img src="img/pic5.png" alt="pic-5"/></li>
-            <li><img src="img/pic6.png" alt="pic-6"/></li>
-            <li><img src="img/pic7.png" alt="pic-7"/></li>
-            <li><img src="img/pic8.png" alt="pic-8"/></li>
-            <!-- <li><img src="img/pic9.png" alt="pic-9"/></li> -->
+            <li><a href="#"><img src="img/pic1.jpg" alt="pic-1"/></a></li>
+            <li><a href="#"><img src="img/pic2.jpg" alt="pic-2"/></a></li>
+            <li><a href="#"><img src="img/pic3.jpg" alt="pic-3"/></a></li>
+            <li><a href="#"><img src="img/pic4.png" alt="pic-4"/></a></li>
+            <li><a href="#"><img src="img/pic5.png" alt="pic-5"/></a></li>
+            <li><a href="#"><img src="img/pic6.png" alt="pic-6"/></a></li>
+            <li><a href="#"><img src="img/pic7.png" alt="pic-7"/></a></li>
+            <li><a href="#"><img src="img/pic8.png" alt="pic-8"/></a></li>
+            <li><a href="#"><img src="img/pic9.png" alt="pic-9"/></a></li>
         </ul>
-        </div>
-       </div>
+      </div>
+      </div>
       <div class="sidebar">
           <button type="button" name="button">CATEGORIES</button>
         <ul>
-            <li>Artistic &amp; Creative</li>
-            <li>Animal &amp; Pets</li>
-            <li>Black &amp; White</li>
-            <li>Nature</li>
-            <li>Landscape</li>
-            <li>Environment</li>
-            <li>Wedding</li>
-            <li>Stock Photos</li>
-            <li>Miscellaneous</li>
+            <li><a href="#">Artistic &amp; Creative</a></li>
+            <li><a href="#">Animal &amp; Pets</a></li>
+            <li><a href="#">Black &amp; White</a></li>
+            <li><a href="#">Nature</a></li>
+            <li><a href="#">Landscape</a></li>
+            <li><a href="#">Environment</a></li>
+            <li><a href="#">Wedding</a></li>
+            <li><a href="#">Stock Photos</a></li>
+            <li><a href="#">Miscellaneous</a></li>
         </ul>
+      </div>
+      <div class="form">
+      <form action="#" method="post">
+        <h3>Post a comment</h3>
+        <p>
+            <label for="name">Name</label>
+            <input name="name" id="name" type="text" required />
+        </p>
+        <p>
+            <label for="comment">Comment</label>
+            <textarea name="comment" id="comment" required></textarea>
+        </p>
+        <p><input type="submit" value="Post comment" /></p>
+      </form>
       </div>
       <div class="footer">
         <p>MyPortfolio @ 2016.All Rights Reserved</p>
       </div>
+    </div>
 
-   </div>
   </body>
 </html>
